Fixed text alignment in grids, $ for quotes, updated grid title

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,12 @@ button,
 select {
   font-family: monospace;
 }
+
+#exchGrid,
+#fxGrid {
+  text-align: left;
+}
+
 a {
   color: black;
   text-decoration: none;
